Added OAuth2 JWT authentication
